@@ -5,13 +5,6 @@ classification = assembly
 ;;Location of velvet
 $;VELVET_PATH$; = $;VELVET_INSTALL_DIR$;
 
-;; Should describe the format of the lists in the input section. Should always 
-;; have the same number of formats as input lists (comma separated)
-;; Example: fasta,fasta,fastq 
-;;    if there were three input lists, the first 2 being in fasta format and the last in fastq
-$;SHORT_FORMAT$; =
-$;LONG_FORMAT$; = 
-
 [input]
 ;; A list of paired end read files. Each file must contain pairs ordered the same in each of the two
 ;; files. To specify multiple paired end file pairs, create comma separated list of lists.
