@@ -1,5 +1,6 @@
 next
 ----
+-prepare_paired_ends_for_velvet: will now auto detect format of input files if format is ambiguous.
 -replace_config_keys: if a var is found that has no value (ie. is blank), replace_config_keys will still replace the var with blank within the config.
 -SavedPipeline.pm: Now supports <INCLUDE elements for including other pipelines
 -overlap_analysis: non-iterative analysis (still contains iterator for post-processing). Made speed improvements to script.
